--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,120 @@
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1140px;
   margin: 0 auto;
   position: relative;
+}
+
+.header-section__content-container {
+  margin-bottom: 40px;
+}
+
+.filter-box__filter {
+  background: #C4C4C4;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 40px;
+}
+.filter-box p {
+  margin-right: 40px;
+}
+.filter-box button {
+  margin-right: 20px;
+}
+.filter-box button:last-child {
+  margin-right: 20px;
+}
+
+.main-section__content-container {
+  grid-column-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-row-gap: 30px;
+}
+
+.content-container__card {
+  width: 360px;
+  position: relative;
+}
+
+.card__img {
+  display: flex;
+  width: 100%;
+  height: 260px;
+  background: #C4C4C4;
+  border-radius: 2%;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  margin-bottom: 12px;
+}
+.card__name {
+  color: #009CF0;
+  margin-right: 10px;
+  font-size: 20px;
+}
+.card__model {
+  color: #009CF0;
+  font-size: 20px;
+}
+.card__info {
+  display: flex;
+  margin-bottom: 12px;
+}
+.card__edit-btn {
+  display: flex;
+  flex-direction: column-reverse;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+.card__edit-btn img {
+  height: 30px;
+}
+.card__price {
+  margin-bottom: 12px;
+  background: #C4C4C4;
+  display: flex;
+  height: 34px;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+.card__placement {
+  background: #C4C4C4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 240px;
+  height: 34px;
+}
+
+.color-year {
+  display: flex;
+  max-width: 300px;
+  height: 34px;
+  background: #C4C4C4;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+@media (max-width: 1199px) {
+  .container {
+    width: 900px;
+    margin: 0 auto;
+    position: relative;
+  }
+  .content-container__card {
+    width: 280px;
+  }
+  .main-section__content-container {
+    grid-column-gap: 30px;
+    display: grid;
+    grid-template-columns: 280px 280px 280px;
+    grid-row-gap: 30px;
+  }
 }/*# sourceMappingURL=style.css.map */
