--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -83,6 +83,13 @@
     justify-content: space-between
     align-items: center
     padding: 10px
+
+.footer
+    &__container
+        height: 90px
+        display: flex
+        align-items: center
+        justify-content: center
 @media (max-width:1199px)
     .container
         width: 900px
