--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,9 @@
   margin-right: 20px;
 }
 
+.main-section {
+  min-height: 1500px;
+}
 .main-section__content-container {
   grid-column-gap: 30px;
   display: grid;
@@ -104,6 +107,11 @@
   padding: 10px;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 .footer__container {
   height: 90px;
   display: flex;
