--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -22,6 +22,7 @@
         &:last-child
             margin-right: 20px
 .main-section
+    min-height: 1500px
     &__content-container
         grid-column-gap: 30px
         display: grid
@@ -85,6 +86,10 @@
     padding: 10px
 
 .footer
+    position: absolute
+    bottom: 0
+    width: 100%
+
     &__container
         height: 90px
         display: flex
