--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,9 +30,6 @@
   margin-right: 20px;
 }
 
-.main-section {
-  min-height: 1500px;
-}
 .main-section__content-container {
   grid-column-gap: 30px;
   display: grid;
@@ -108,8 +105,6 @@
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
 }
 .footer__container {
@@ -117,6 +112,37 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.modal {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+}
+.modal__content {
+  padding: 20px;
+  border-radius: 12px;
+  background: white;
+  width: 50vw;
+  transition: 0.4s all;
+}
+
+.modal.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal__content.active {
+  transform: scale 1;
 }
 
 @media (max-width: 1199px) {
