--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,6 +65,7 @@
 .card__info {
   display: flex;
   margin-bottom: 12px;
+  border-radius: 7px;
 }
 .card__edit-btn {
   display: flex;
@@ -84,6 +85,7 @@
   align-items: center;
   justify-content: center;
   font-size: 24px;
+  border-radius: 7px;
 }
 .card__placement {
   background: #C4C4C4;
@@ -92,6 +94,7 @@
   justify-content: center;
   max-width: 240px;
   height: 34px;
+  border-radius: 7px;
 }
 
 .color-year {
