--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -52,6 +52,7 @@
     &__info
         display: flex
         margin-bottom: 12px
+        border-radius: 7px
     &__edit-btn
         display: flex
         flex-direction: column-reverse
@@ -68,6 +69,7 @@
         align-items: center
         justify-content: center
         font-size: 24px
+        border-radius: 7px
     &__placement
         background: #C4C4C4
         display: flex
@@ -75,6 +77,7 @@
         justify-content: center
         max-width: 240px
         height: 34px
+        border-radius: 7px
 .color-year
     display: flex
     max-width: 300px
