--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -19,8 +19,19 @@
         margin-right: 40px
     button
         margin-right: 20px
+        display: flex
+        align-items: center
+        justify-content: center
+        width: 73px
         &:last-child
             margin-right: 20px
+
+.arrowUp
+    transform: rotate(90deg)
+    display: block
+.arrowDown
+    transform: rotate(-90deg)
+    display: block
 .main-section
     &__content-container
         grid-column-gap: 30px
