--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,6 +44,9 @@
   display: block;
 }
 
+.main-section {
+  margin-bottom: 100px;
+}
 .main-section__content-container {
   grid-column-gap: 30px;
   display: grid;
@@ -99,15 +102,6 @@
   align-items: center;
   justify-content: center;
   font-size: 24px;
-  border-radius: 7px;
-}
-.card__placement {
-  background: #C4C4C4;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 240px;
-  height: 34px;
   border-radius: 7px;
 }
 
