--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -33,6 +33,7 @@
     transform: rotate(-90deg)
     display: block
 .main-section
+    margin-bottom: 100px
     &__content-container
         grid-column-gap: 30px
         display: grid
@@ -81,14 +82,6 @@
         justify-content: center
         font-size: 24px
         border-radius: 7px
-    &__placement
-        background: #C4C4C4
-        display: flex
-        align-items: center
-        justify-content: center
-        max-width: 240px
-        height: 34px
-        border-radius: 7px
 .color-year
     display: flex
     max-width: 300px
@@ -99,9 +92,6 @@
     padding: 10px
 
 .footer
-    // position: absolute
-    // bottom: 0
-    // height: 90px
     width: 100%
     &__container
         height: 90px
