--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,7 @@
   align-items: center;
   justify-content: center;
   width: 73px;
+  cursor: pointer;
 }
 .filter-box button:last-child {
   margin-right: 20px;
@@ -150,6 +151,8 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  justify-content: center;
+  align-items: center;
 }
 .modal__editing input {
   margin-bottom: 20px;
@@ -171,6 +174,11 @@
   transform: scale 1;
 }
 
+.yandex-map {
+  width: 100%;
+  height: 500px;
+}
+
 @media (max-width: 1199px) {
   .container {
     width: 900px;
@@ -185,5 +193,35 @@
     display: grid;
     grid-template-columns: 280px 280px 280px;
     grid-row-gap: 30px;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    width: 720px;
+  }
+  .main-section__content-container {
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 280px 280px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    width: 540px;
+  }
+  .main-section__content-container {
+    grid-column-gap: 30px;
+    display: grid;
+    grid-template-columns: 280px;
+    grid-row-gap: 30px;
+  }
+}
+@media (max-width: 575px) {
+  .container {
+    width: 100%;
+  }
+  .yandex {
+    display: flex;
+    width: 80%;
   }
 }/*# sourceMappingURL=style.css.map */
