--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,7 +144,7 @@
   padding: 20px;
   border-radius: 12px;
   background: white;
-  width: 15vw;
+  width: 275px;
   transition: 0.4s all;
 }
 .modal__editing {
