--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -118,7 +118,7 @@
         padding: 20px
         border-radius: 12px
         background: white
-        width: 15vw
+        width: 275px
         transition: 0.4s all
     &__editing
         display: flex
@@ -172,12 +172,6 @@
             display: grid
             grid-template-columns: 280px
             grid-row-gap: 30px
-    // .yandex-map
-    //     display: flex
-    //     align-items: center
-    //     justify-content: center
-    //     width: 100%
-    //     height: 500px
 @media (max-width:575px)
     .container
         width: 100%
