--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -24,6 +24,11 @@
         justify-content: center
         width: 73px
         cursor: pointer
+        border: 0
+        border-radius: 5px
+        background: #009CF0
+        color: #fff
+        font-size: 16px
         &:last-child
             margin-right: 20px
 
@@ -74,6 +79,12 @@
         top: 0px
         img
             height: 30px
+            border: 1px solid #009CF0
+            background: #009CF0
+            border-radius: 50%
+            &:last-child
+                border: 1px solid pink
+                background: pink
 
     &__price
         margin-bottom: 12px
