trying to setUp a yandex Map

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,4 @@
+$color-blue: #009CF0
 *
     box-sizing: border-box
 .container
@@ -26,7 +27,7 @@
         cursor: pointer
         border: 0
         border-radius: 5px
-        background: #009CF0
+        background: $color-blue
         color: #fff
         font-size: 16px
         &:last-child
@@ -61,11 +62,11 @@
         margin: 0
         margin-bottom: 12px
     &__name
-        color: #009CF0
+        color: $color-blue
         margin-right: 10px
         font-size: 20px
     &__model
-        color: #009CF0
+        color: $color-blue
         font-size: 20px
     &__info
         display: flex
@@ -79,8 +80,8 @@
         top: 0px
         img
             height: 30px
-            border: 1px solid #009CF0
-            background: #009CF0
+            border: 1px solid $color-blue
+            background: $color-blue
             border-radius: 50%
             &:last-child
                 border: 1px solid pink
@@ -144,6 +145,13 @@
                 margin-bottom: 0
     &__btn
         max-width: 250px
+        cursor: pointer
+        border: 0
+        border-radius: 5px
+        background: $color-blue
+        color: #fff
+        font-size: 16px
+        height: 25px
 .modal.active
     opacity: 1
     pointer-events: all
