--- a/src/css/style.css
+++ b/src/css/style.css
@@ -175,6 +175,13 @@
 }
 .modal__btn {
   max-width: 250px;
+  cursor: pointer;
+  border: 0;
+  border-radius: 5px;
+  background: #009CF0;
+  color: #fff;
+  font-size: 16px;
+  height: 25px;
 }
 
 .modal.active {
