--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,14 +16,14 @@
   background: #C4C4C4;
   margin-bottom: 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   height: 40px;
 }
 .filter-box p {
   margin-right: 40px;
 }
-.filter-box button {
+.filter-box__btn-filter {
   margin-right: 20px;
   display: flex;
   align-items: center;
@@ -36,8 +36,36 @@
   color: #fff;
   font-size: 16px;
 }
-.filter-box button:last-child {
+.filter-box__btn-filter:last-child {
   margin-right: 20px;
+}
+.filter-box__text {
+  color: white;
+  text-decoration: none;
+}
+.filter-box__sort {
+  background: #C4C4C4;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 40px;
+}
+.filter-box__btn-map {
+  border: 0;
+  border-radius: 5px;
+  background: #009CF0;
+  color: #fff;
+  font-size: 16px;
+  height: 26px;
+  margin-left: 20px;
+}
+
+.container-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
 }
 
 .arrowUp {
@@ -233,6 +261,10 @@
     display: grid;
     grid-template-columns: 280px;
     grid-row-gap: 30px;
+  }
+  .filter-box p {
+    margin-right: 5px;
+    padding-left: 7px;
   }
 }
 @media (max-width: 575px) {
