--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -13,12 +13,12 @@ $color-blue: #009CF0
         background: #C4C4C4
         margin-bottom: 50px
         display: flex
-        justify-content: flex-end
+        justify-content: space-between
         align-items: center
         height: 40px
     p
         margin-right: 40px
-    button
+    &__btn-filter
         margin-right: 20px
         display: flex
         align-items: center
@@ -32,7 +32,29 @@ $color-blue: #009CF0
         font-size: 16px
         &:last-child
             margin-right: 20px
-
+    &__text
+        color: white
+        text-decoration: none
+    &__sort
+        background: #C4C4C4
+        display: flex
+        justify-content: flex-end
+        align-items: center
+        height: 40px
+    &__btn-map
+        border: 0
+        border-radius: 5px
+        background: #009CF0
+        color: #fff
+        font-size: 16px
+        height: 26px
+        margin-left: 20px
+.container-info
+    display: flex
+    justify-content: center
+    align-items: center
+    text-align: center
+    font-size: 20px
 .arrowUp
     transform: rotate(90deg)
     display: block
@@ -191,6 +213,10 @@ $color-blue: #009CF0
             display: grid
             grid-template-columns: 280px
             grid-row-gap: 30px
+    .filter-box
+        p
+            margin-right: 5px
+            padding-left: 7px
 @media (max-width:575px)
     .container
         width: 100%
